# mcdecoder

./: .clang-format  .coveragerc  .gitignore  CMakeLists.txt  Gemfile  LICENSE  MANIFEST.in  Pipfile  README.md  requirements.txt  requirements_minimum.txt  setup.py
.github/workflows/: codeql-analysis.yml  pythonpackage.yml
ctest/: Makefile  athrill_setup.cc  build.mk  conanfile.txt  mcdecoder_setup.cpp  mcdhelper.cpp  mcdhelper.h  mcdhelper.hpp  stub.c  test.cpp
ctest/features/step_definitions/: mcdecoder_steps.cc  mcdecoder_steps.cpp
ctest/features/steps/: mcdecoder_steps.py
ctest/templates/athrill_helper/: {{ns}}mcdhelper.cpp  {{ns}}mcdhelper.hpp
ctest/templates/mcdecoder_helper/: {{ns}}mcdhelper.cc  {{ns}}mcdhelper.cpp
doc/: conf.py  index.rst  mc_desc_spec.yaml  mc_description.rst  tutorial.rst
doc/_build/doctrees/: decoder_model_reference.doctree  environment.pickle  index.doctree  mc_description.doctree  specifications.doctree  tutorial.doctree  user_templates.doctree
doc/_build/html/: .buildinfo  index.html  objects.inv  tutorial.html  user_templates.html
docs/: .buildinfo  README.html  changelog.html  commandline_options.html  decoder_model_reference.html  dev_coding_style.html  dev_coding_style_c.html  dev_coding_style_cpp.html  dev_coding_style_python.html  dev_design.html  dev_docs.html  dev_guides copy.html  dev_guides.html  dev_modules.html  genindex.html  guides.html  index.html  mc_description.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  spec_commandline_options.html  spec_limit.html  spec_mc_desc.html  spec_mcdecoder_api.html  spec_mcdecoder_model.html  spec_template_var.html  specifications.html  tutorial.html  user_templates.html  version.html
docs/_images/: graphviz-aa6f6f549c3d4c0f35d35bec9168692ab3dadc48.png.map  graphviz-e6e9111ac1803494d1e3c1609a6e6514cda8e21b.png.map
docs/_sources/: README.rst.txt  changelog.rst.txt  decoder_model_reference.rst.txt  dev_coding_style.rst.txt  dev_coding_style_cpp.rst.txt  dev_coding_style_python.rst.txt  dev_design.rst.txt  dev_docs.rst.txt  dev_guides copy.rst.txt  dev_guides.rst.txt  dev_modules.rst.txt  guides.rst.txt  index.rst.txt  quickstart.rst.txt  spec_limit.rst.txt  spec_mc_desc.rst.txt  spec_mcdecoder_model.rst.txt  spec_template_var.rst.txt  specifications.rst.txt  tutorial.rst.txt  user_templates.rst.txt  version.rst.txt
examples/include/: arm.yaml
examples/quickstart/: arm.yaml  client.c  out.txt
examples/sample_program/: hello.c  hello_arm
examples/user_templates/: arm.yaml
mcparser/: __main__.py
mcparser/templates/: mcparser.c
sample/sample_parser/: main.c  sample_parser.c  sample_parser.h
sample/sample_program/: hello_riscv
sandbox/: checker_performance.ipynb
src/mcdecoder/: __main__.py  __version__.py  app.py  checker.py  common.py  core.py  emulator.py  exporter.py  generator.py  mc_schema.json
src/mcparser/: __init__.py  __main__.py  generator.py
src/mcparser_gen/: __main__.py  generator.py
src_docs/: Makefile  README.rst  changelog.rst  commandline_options.rst  conf.py  decoder_model_reference.rst  dev_coding_style_c.rst  dev_coding_style_cpp.rst  dev_coding_style_python.rst  dev_design.rst  dev_docs.rst  dev_guides.rst  dev_modules.rst  guides.rst  index.rst  mc_desc_spec.yaml  mc_description.rst  quickstart.rst  spec_commandline_options.rst  spec_limit.rst  spec_mc_desc.rst  spec_mc_desc.yaml  spec_mcdecoder_api.rst  spec_mcdecoder_model.rst  spec_template_var.rst  specifications.rst  user_templates.rst  version.rst
test/: arm.yaml  arm_thumb.yaml  arm_thumb_big.yaml  complex_condition.yaml  decision_tree_code16x2.yaml  decision_tree_code32x1.yaml  duplicate_instructions.yaml  include.yaml  include_arg_not_scalar.yaml  primitive_condition.yaml  riscv.yaml
test/include/: include.yaml
test/include_mixture/: include.yaml
test/process_instruction_hook_with_config/: process_instruction_hook.yaml
test/process_instruction_hook_without_func/: config.py
test/user_templates/: {{ns}}template.c  {{ns}}template.h
tests/common/: arm_big.yaml  arm_thumb_big.yaml  duplicate_instructions_2pair.yaml  duplicate_instructions_same_name.yaml  equality_operator.yaml  minimum.yaml  missing_field_name_in_equality_condition.yaml  missing_field_name_in_field_object.yaml  missing_field_name_in_function_object.yaml  missing_field_name_in_in_condition.yaml  missing_field_name_in_in_range_condition.yaml  unmatched_instruction_encodings.yaml  unsupported_instruction_length_24.yaml  unsupported_instruction_length_64.yaml  unsupported_instruction_length_8.yaml
tests/feature/: CMakeLists.txt  Makefile  build.mk  mcdhelper.cc
tests/feature/features/: decode_instruction.feature
tests/feature/features/steps/: mcdecoder_steps.py
tests/feature/templates/athrill_helper/: {{ns}}mcdhelper.cc
(+53 files in other folders)
